Changes from v1.2.2 to v1.2.3
- Correct display bug (variable miswritten)

Changes from v1.2.1 to v1.2.2
- Restrict field number between 1 and 9999 (number of minutes or days)
- Add storing for latest batch_manager_metadata update timestamp (and number of files involved)
- Add a third filter looking for files modified since then (latest batch_manager_metadata update)
- Add a selector in order to enable a subset in the three filters
- Add ability to find videos which representatives have been modified 
	(useful if representative metadata are placeholders for video metadata, works in my customised workflow)
- Improve var testing (empty value do nothing instead of WARNING)

Changes from v1.2.0 to v1.2.1
- Improvment: descriptions

Changes from v1.1 to v1.2.0
- Changed: use skeleton canevas
- Changed: config saved in database

Changes from v1.0 to v1.1

Initial Release v1.0
- Initial release
- Initial documentation
