@@ -1,6 +1,6 @@
 	<p><strong>Fsrmp means:</strong> filter system recently modified pictures.</p>
 	<p>When some pictures are updated by another application in some sparse categories, it can be useful to perform tasks on them with batch manager. This plugin provides up to three new filters to grab recently modified picture files on the operating system.</p>
 	<p>These filters are tunable. Are enabled only those checked in the configuration page.</p>
-	<p>Example: assume, once in a while, you are adding some tags to you pictures with jBrout software (or digikam, ...). You will be happy PIWIGO to get these pictures metadata quickly up to date.</p>
+	<p>Example: assume, once in a while, you are adding some tags to you pictures with jBrout software (or digikam, ...). If your tags are stored within the picture file, tagging is modifying your file. You will be happy PIWIGO to get these pictures metadata quickly up to date.</p>
 
-	<p>NB: among pictures listed by `find`, may be some representatives coming from pwg_representative sub-directories. Those pictures won't be displayed in the batch-manager list. But (in a customized video workflow), representives which name ends with _hq.jpg or _lq.jpg, which are representing a video .avi, will be handled in order to list the video file. Then, when updating metadata, tags dropped in representatives will be copied in PIWIGO for the video file.</p>
+	<p>NB: you can also add tags to a representatives picture. The represented file will be listed in the batch manager. For instance a video.</p>
