@@ -1,6 +1,6 @@
 	<p><strong>Fsrmp signifie :</strong> filter system recently modified pictures. filtre les images récemment modifiées sur le système.</p>
 	<p>Quand de nombreuses images sont mises à jour par une autre application dans des catégories éparses, il peut être utile de les manipuler par le biais de la gestion par lot. Ce plugin fourni jusqu'à trois nouveaux filtres prédéfinis pour récupérer les fichiers images récemment modifiés sur le système. </p>
 	<p>Ces filtres sont en partie paramétrables. Ne sont activés que ceux qui sont cochés dans la page de configuration.</p>
-	<p>Exemple : considérons que de temps en temps, vous ajoutiez des étiquettes à vos photos avec le logiciel jBrout (ou digikam, ...). Vous serez content que PIWIGO puisse rapidement synchroniser les méta-données de ces photos.</p>
+	<p>Exemple : considérons que de temps en temps, vous ajoutiez des étiquettes à vos images avec le logiciel jBrout (ou digikam, ...). Si vos étiquettes sont stockées dans le fichier image, ajouter une étiquette modifie le fichier. Vous serez content que PIWIGO puisse rapidement synchroniser les méta-données de ces photos.</p>
 
-	<p>NB : parmi les images récupérées par `find`, il peut y avoir des images représentatives, issues des sous-répertoires pwg_representative. Ces images ne pourront pas être affichées dans la liste pour la gestion par lot. En revanche (ce qui correspond à un cas particulier de gestion des vidéos), les représentatives se terminant par _hq.jpg ou _lq.jpg, représentant par exemple une vidéo .avi, seront gérées de manière à lister la vidéo. Ainsi, dans le traitement de synchronisation des méta-données, des étiquettes déposées sur les représentatives seront portées dans PIWIGO pour la vidéo correspondante.</p>
+	<p>NB : vous pouvez même ajouter des étiquettes à une image représentative. Le fichier réprésenté sera alors listé pour la gestion par lot. Par exemple une vidéo.</p>
