@@ -1,4 +1,7 @@
+
 Changes from v1.2.2 to v1.2.3
+- Readme.md
+- Add ability to list every file wich representative has been modified. (video was only a special case)
 - Correct display bug (variable miswritten)
 
 Changes from v1.2.1 to v1.2.2
